--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando entorno Desarrollo ..
-configuracion.autor.nombre=Mario Pulido Leno
-configuracion.autor.email=mariopulidoleno@hotmail.es
+configuracion.texto=Configurando entorno Desarrollo.
+configuracion.autor.nombre=Mariete Pulido Leno
+configuracion.autor.email=marietepulidoo@hotmail.es
